<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="@android:dimen/notification_large_icon_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/entry_1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="@android:dimen/notification_large_icon_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/entry_2"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="45dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@android:dimen/notification_large_icon_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/entry_3"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="@android:dimen/notification_large_icon_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/entry_4"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="45dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="@android:dimen/notification_large_icon_width"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/entry_5"
            tools:layout_editor_absoluteX="208dp"
            tools:layout_editor_absoluteY="16dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>